# fund

./: Cargo.toml  PROPOSAL.md  README.md  optimize.sh
artifacts/: checksums.txt  fund.wasm  kickstarter.wasm
src/: contract.rs  lib.rs  msg.rs  storage.rs  tests.rs
