[package]
name = "fund"
version    = "0.1.0"
edition    = "2021"
homepage   = "https://ohhnft.io"
repository = "https://github.com/ohhnft/fund"
license    = "ALL RIGHTS RESERVED"

[lib]
crate-type = ["cdylib"]

[alias]
wasm = "build --target wasm32-unknown-unknown --release --lib"
wasm-debug = "build --target wasm32-unknown-unknown --lib"
schema = "run schema"

[dependencies]
cosmwasm-std = "2.0.4"
cosmwasm-schema = "2.0.4"
cw-storage-plus = "2.0.0"
sylvia = "1.1.0"

cw20 = "2.0.0"
cw20-base = "2.0.0"

serde = "1.0.198"
schemars = "0.8"
semver = "1.0.16"
thiserror = "1.0.61"

serde_json = "1.0.121"

[dev-dependencies]
cw-multi-test = "2.1.0"
